--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,6 +1,6 @@
 <h3>new Book</h3> 
 
-<form action="/books" method="POST" enctype="multipart/form-data">
+<form action="/books" method="POST" >
 <%- include('_form_fields') %> 
 <a href="/books">Cancel</a>
 <button type="submit">Create</button>
