--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -17,6 +17,11 @@
 <%  authors.forEach( author=> {
     %> 
     <div> <%=author.name %> </div>
+    <a href="/authors/<%= author.id %>">View</a>
+    <a href="/authors/<%= author.id %>/edit">Edit</a>
+    <form action="POST" action="/authors/<%= author.id %>?_method=DELETE">
+     <button type= "submit"> Delete</button>
+        </form>
     <%
 }) %> 
 
