--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -28,7 +28,7 @@
 
 <div>
     <label>Cover</label>
-    <input type="file" name="cover" class="book-cover filepond">
+    <input type="file" name="cover" class="filepond">
 </div>
 
 
